--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "lucide-react": "^0.501.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.5.2"
+    "react-hot-toast": "^2.5.2",
+    "tiff": "^6.2.0",
+    "utif": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
